Handle almost all disconnects correctly

--- a/README.pod
+++ b/README.pod
@@ -38,6 +38,9 @@ you need to make the following simple steps:
               path => qr/\.(?:js|css|jpe?g|gif|png|html?|js|css|swf|ico)$/,
               root => "$path_to_socket_io/example";
 
+            enable "SimpleLogger",
+              level => 'debug';
+
             enable "SocketIO", handler => sub {
                 my $self = shift;
 
