--- a/README.pod
+++ b/README.pod
@@ -38,8 +38,7 @@ you need to make the following simple steps:
               path => qr/\.(?:js|css|jpe?g|gif|png|html?|js|css|swf|ico)$/,
               root => "$path_to_socket_io/example";
 
-            enable "SimpleLogger",
-              level => 'debug';
+            enable "SimpleLogger", level => 'debug';
 
             enable "SocketIO", handler => sub {
                 my $self = shift;
@@ -49,17 +48,20 @@ you need to make the following simple steps:
                         my $self = shift;
                         my ($message) = @_;
 
-                        $self->send_message(
-                            {   message => [
-                                    $self->id,
-                                    join '' => reverse split '' => $message
-                                ]
-                            }
-                        );
+                        $self->send_broadcast({message => [$self->id, $message]});
+                    }
+                );
+
+                $self->on_disconnect(
+                    sub {
+                        $self->send_broadcast(
+                            {announcement => $self->id . ' disconnected'});
                     }
                 );
 
                 $self->send_message({buffer => []});
+
+                $self->send_broadcast({announcement => $self->id . ' connected'});
             };
 
             sub {
