Fixed dependencies list

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for perl module Plack::Middleware::SocketIO
 
+0.009001 2011-03-28
+
+ - Fixed dependencies list
+
 0.009000 2011-03-16
 
  - Initial release
