Added heartbeat to WebSockets too

--- a/Changes
+++ b/Changes
@@ -2,7 +2,9 @@ Revision history for perl module Plack::Middleware::SocketIO
 
 0.009003
 
- - It is possible to pass class name and method instead of inline handler
+ - It is possible to pass class name or instance and method instead of inline
+   handler
+ - Added heartbeat to WebSockets too
 
 0.009002 2011-03-29
 
