--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for perl module PocketIO
 
+0.009005 2011-09-23
+
+ - CPAN release
+ - Redis pool backend
+ - Socket.IO 0.8 version support
+
 0.009004 2011-05-12
 
  - Renamed to PocketIO
