--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for perl module PocketIO
 
+0.009006 2011-10-11
+
+ - Require Protocol::WebSocket 0.9.5
+ - Increased connection timeout to 30s
+
 0.009005 2011-09-23
 
  - CPAN release
