--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for perl module PocketIO
 
+0.009009
+
+ - Extracted SocketIO protocol into a separated distribution
+ - Return raw object but wrap exceptions middelware on the fly
+ - Fixed on_disconnect callback
+
 0.009008 2011-12-06
 
  - Fixed websocket test
